--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>315 Tagged Open Ruby Bugs as of 2022-08-25 01:45:10 +0900</title>
+<title>312 Tagged Open Ruby Bugs as of 2022-08-26 06:38:09 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -10,9 +10,9 @@
 <input type="submit" value="build" />
 <input type="submit" value="ractor" />
 <input type="submit" value="test" />
+<input type="submit" value="maybenotbug" />
 <input type="submit" value="patch" />
 <input type="submit" value="ext" />
-<input type="submit" value="maybenotbug" />
 <input type="submit" value="lib" />
 <input type="submit" value="encoding" />
 <input type="submit" value="thread" />
@@ -20,8 +20,8 @@
 <input type="submit" value="notbug" />
 <input type="submit" value="regexp" />
 <input type="submit" value="perf" />
-<input type="submit" value="parser" />
 <input type="submit" value="fiber" />
+<input type="submit" value="parser" />
 <input type="submit" value="mjit" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="autoload" />
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">315</span> matched)
+(<span id="matched">312</span> matched)
 <table>
-<caption>315 Tagged Open Ruby Bugs as of 2022-08-25 01:45:10 +0900</caption>
+<caption>312 Tagged Open Ruby Bugs as of 2022-08-26 06:38:09 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" maybenotbug core ">
+<td><a href="https://bugs.ruby-lang.org/issues/18978">18978</a>
+</td>
+<td>maybenotbug core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/18978">Unexpected behaviour in Time.utc and Time.local when 8 arguments are passed in</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18974">18974</a>
 </td>
@@ -77,17 +84,17 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18966">Strange behavior when numbered parameters and method definition are both used in a block</a>
 </td>
 </tr>
-<tr class=" ext ">
+<tr class=" maybenotbug ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/18963">18963</a>
 </td>
-<td>ext</td>
+<td>maybenotbug ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18963">Ripper.tokenize(code).join != code when heredoc and multiline string is on the same line</a>
 </td>
 </tr>
-<tr class=" patch core ">
+<tr class=" maybenotbug patch core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18960">18960</a>
 </td>
-<td>patch core</td>
+<td>maybenotbug patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18960">Module#using raises RuntimeError when called at toplevel from wrapped script</a>
 </td>
 </tr>
@@ -96,13 +103,6 @@
 </td>
 <td>win core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18947">Unexpected Errno::ENAMETOOLONG on Windows</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18945">18945</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18945">node_id is not initialized but it is used leading to UB</a>
 </td>
 </tr>
 <tr class=" ractor ">
@@ -117,13 +117,6 @@
 </td>
 <td>ractor maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18933">Dir.tmpdir implemented in non-Ractor-safe manner</a>
-</td>
-</tr>
-<tr class=" win build ">
-<td><a href="https://bugs.ruby-lang.org/issues/18932">18932</a>
-</td>
-<td>win build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18932">Ruby 3.1 - Allow building with VS 2022</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -175,10 +168,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18912">Build failure with macOS 13 (Ventura) Beta</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" patch lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/18908">18908</a>
 </td>
-<td>lib</td>
+<td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18908">Allow username and password to be extracted from the http_proxy variable on Windows</a>
 </td>
 </tr>
@@ -201,13 +194,6 @@
 </td>
 <td>tracepoint maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18886">Struct aref and aset don&#39;t trigger any tracepoints.</a>
-</td>
-</tr>
-<tr class=" parser maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/18883">18883</a>
-</td>
-<td>parser maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18883">parse.y: trailing comma cannot coexist with star</a>
 </td>
 </tr>
 <tr class=" win core ">
@@ -334,13 +320,6 @@
 </td>
 <td>autoload</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18782">Race conditions in autoload when loading the same feature with multiple threads.</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18767">18767</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18767">IO.foreach hangs up when passes limit=0</a>
 </td>
 </tr>
 <tr class=" build ext ">
