--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>315 Tagged Open Ruby Bugs as of 2022-09-17 07:05:55 +0900</title>
+<title>315 Tagged Open Ruby Bugs as of 2022-09-22 05:12:02 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -24,8 +24,8 @@
 <input type="submit" value="parser" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="mjit" />
-<input type="submit" value="autoload" />
 <input type="submit" value="refine" />
+<input type="submit" value="autoload" />
 <input type="submit" value="backport" />
 <input type="submit" value="jit" />
 <input type="submit" value="unfixable" /></p>
@@ -33,7 +33,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">315</span> matched)
 <table>
-<caption>315 Tagged Open Ruby Bugs as of 2022-09-17 07:05:55 +0900</caption>
+<caption>315 Tagged Open Ruby Bugs as of 2022-09-22 05:12:02 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,11 +42,18 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" build os/arch ">
-<td><a href="https://bugs.ruby-lang.org/issues/19005">19005</a>
+<tr class=" patch ext maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/19012">19012</a>
 </td>
-<td>build os/arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19005">Ruby interpreter compiled XCode 14 cannot build some native gems on macOS</a>
+<td>patch ext maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19012">BasicSocket#recv* methods return an empty packet instead of nil on closed connections</a>
+</td>
+</tr>
+<tr class=" encoding ">
+<td><a href="https://bugs.ruby-lang.org/issues/19007">19007</a>
+</td>
+<td>encoding</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19007">Unicode tables differences from Unicode.org 14.0 data and removed properties since 13.0</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -207,7 +214,7 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18912">18912</a>
 </td>
 <td>build os/arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18912">Build failure with macOS 13 (Ventura) Beta</a>
+<td><a href="https://bugs.ruby-lang.org/issues/18912">Build failure with Xcode 14 and macOS 13 (Ventura) Beta</a>
 </td>
 </tr>
 <tr class=" patch lib ">
@@ -348,13 +355,6 @@
 </td>
 <td>patch lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18783">OptionParser should recognize &quot;-&quot; as an optional argument</a>
-</td>
-</tr>
-<tr class=" autoload ">
-<td><a href="https://bugs.ruby-lang.org/issues/18782">18782</a>
-</td>
-<td>autoload</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18782">Race conditions in autoload when loading the same feature with multiple threads.</a>
 </td>
 </tr>
 <tr class=" build ext ">
