--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>315 Tagged Open Ruby Bugs as of 2022-09-22 05:12:02 +0900</title>
+<title>316 Tagged Open Ruby Bugs as of 2022-09-27 06:21:13 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -10,10 +10,10 @@
 <input type="submit" value="build" />
 <input type="submit" value="ractor" />
 <input type="submit" value="test" />
-<input type="submit" value="maybenotbug" />
-<input type="submit" value="patch" />
-<input type="submit" value="ext" />
 <input type="submit" value="lib" />
+<input type="submit" value="patch" />
+<input type="submit" value="maybenotbug" />
+<input type="submit" value="ext" />
 <input type="submit" value="encoding" />
 <input type="submit" value="notbug" />
 <input type="submit" value="thread" />
@@ -31,9 +31,9 @@
 <input type="submit" value="unfixable" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">315</span> matched)
+(<span id="matched">316</span> matched)
 <table>
-<caption>315 Tagged Open Ruby Bugs as of 2022-09-22 05:12:02 +0900</caption>
+<caption>316 Tagged Open Ruby Bugs as of 2022-09-27 06:21:13 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,6 +42,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/19020">19020</a>
+</td>
+<td>patch lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19020">Unexpected timeout thread appears in ThreadGroup</a>
+</td>
+</tr>
+<tr class=" patch lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/19017">19017</a>
+</td>
+<td>patch lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19017">Net::HTTP may block when attempting to reuse a persistent connection</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/19016">19016</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19016">syntax_suggest is not working with Ruby 3.2.0-preview2</a>
+</td>
+</tr>
 <tr class=" patch ext maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/19012">19012</a>
 </td>
@@ -140,13 +161,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/18966">Strange behavior when numbered parameters and method definition are both used in a block</a>
 </td>
 </tr>
-<tr class=" maybenotbug patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/18960">18960</a>
-</td>
-<td>maybenotbug patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18960">Module#using raises RuntimeError when called at toplevel from wrapped script</a>
-</td>
-</tr>
 <tr class=" win core ">
 <td><a href="https://bugs.ruby-lang.org/issues/18947">18947</a>
 </td>
@@ -208,13 +222,6 @@
 </td>
 <td>test os/arch</td>
 <td><a href="https://bugs.ruby-lang.org/issues/18914">Segmentation fault during Ruby test suite execution</a>
-</td>
-</tr>
-<tr class=" build os/arch ">
-<td><a href="https://bugs.ruby-lang.org/issues/18912">18912</a>
-</td>
-<td>build os/arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/18912">Build failure with Xcode 14 and macOS 13 (Ventura) Beta</a>
 </td>
 </tr>
 <tr class=" patch lib ">
